--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,11 +1,7 @@
 <!--index.wxml-->
 <view class="container">
   <!-- 搜索框-->
-  <view class="search">
-    <view class="search-input">
-      <icon type="search" size="16" />搜索
-    </view>
-  </view>
+  <search/>
 
   <!-- 轮播图 -->
   <swiper indicator-dots indicator-color="rgba(255,255,255,0.3)" indicator-active-color="#fff" autoplay="{{autoplay}}">
