--- a/pages/search_list/index.wxml
+++ b/pages/search_list/index.wxml
@@ -13,3 +13,22 @@
     {{item}}
   </view>
 </view>
+
+<!-- 商品列表 -->
+<view class="good-list">
+  <!-- 单个商品 -->
+  <view>
+    <navigator url="" class="goods-item">
+      <image src="https://img.alicdn.com/bao/uploaded/i4/2200678545211/O1CN01kDVTL91oMgRaEjNfc_!!0-item_pic.jpg"></image>
+      <view class="goods-right">
+        <view class="goods-title">
+          小米(MI)雨伞 全自动折叠太阳防晒遮阳伞米家男女通用商务家庭用创意超轻大号双人晴雨伞
+        </view>
+        <view class="goods-price">
+          ¥
+          <text>69.00</text>
+        </view>
+      </view>
+    </navigator>
+  </view>
+</view>
