--- a/pages/search_list/index.wxss
+++ b/pages/search_list/index.wxss
@@ -65,3 +65,10 @@
 .goods-price text{
   font-size:20px;
 }
+
+.load-more{
+  padding:20rpx;
+  text-align: center;
+  font-size: 12px;
+  color:#999;
+}
